--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">RidAr</string>
     <string name="action_settings">Settings</string>
     <string name="label_button_getdirections">Get Directions</string>
-    <string name="textview_routecoordinates_2waypoints">Press "Get Directions" button to calculate a route:\nStart: Burnaby\nEnd: YVR Airport</string>
+    <string name="textview_routecoordinates_2waypoints">Press "Get Directions" button to calculate a route:\nStart: BLR\nEnd: YVR Airport</string>
 </resources>
